feat: [CDS-54250]: Change rollback logic for Terraform Cloud (#44491)
* feat:[CDS-52326]: Terraform Cloud rollback step delegate side

* feat:[CDS-52329]: Add support for sentinel policies

* feat:[CDS-52329]: Add support for sentinel policies and refactor

* feat:[CDS-54250]: FF name change, change rollback logic, update model

* feat:[CDS-54250]: remove unused imports

* feat:[CDS-54250]: fix failing tests

* feat:[CDS-54250]: add more info in TerraformCloudConfig

* feat:[CDS-54250]: change rollback logic

* feat:[CDS-54250]: fix code format

* feat:[CDS-54250]: code refactor

* feat:[CDS-54250]: remove unused class

* feat:[CDS-54250]: revert rollbackType and add ff check